# setup.cfg
[metadata]
name = jitcdde-outputHelpers
version = 0.1.0
author = Zenos.AI
author_email = zenoscience.ai@gmail.com
description = A wrapper for jitcdde that enables to output the intermediate helper variables alongside the states.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ZenoscienceAI/jitcdde-outputHelpers
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    Jinja2==3.1.2
    jitcdde==1.8.3
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
jitcdde_outputHelpers = 
    *.c,
    *.txt